iOS in progress cut

--- a/ios/Hunger Free City/Views/Main.storyboard
+++ b/ios/Hunger Free City/Views/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F25a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -8,7 +8,7 @@
         <!--Distribution Centers-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="CentersViewController" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="CentersViewController" customModule="Hunger_Free_City" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
@@ -20,7 +20,7 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8eY-uF-uzR" userLabel="List Container View">
                                 <rect key="frame" x="0.0" y="108" width="600" height="443"/>
                                 <connections>
-                                    <segue destination="aKh-LF-pj3" kind="embed" id="NyT-lX-SHh"/>
+                                    <segue destination="aKh-LF-pj3" kind="embed" identifier="ListView" id="NyT-lX-SHh"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hzq-R8-ko6" userLabel="Map Container View">
@@ -69,45 +69,40 @@
                     </view>
                     <navigationItem key="navigationItem" title="Distribution Centers" id="qZ7-NQ-4jE"/>
                     <connections>
-                        <outlet property="listContainerView" destination="8eY-uF-uzR" id="IVI-kP-1pr"/>
-                        <outlet property="mapContainerView" destination="hzq-R8-ko6" id="Khv-p7-e6g"/>
+                        <outlet property="listContainerView" destination="8eY-uF-uzR" id="63b-4d-hUs"/>
+                        <outlet property="mapContainerView" destination="hzq-R8-ko6" id="ASm-Bx-y0I"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1474" y="139"/>
+            <point key="canvasLocation" x="1588" y="159"/>
         </scene>
-        <!--Needed Items-->
-        <scene sceneID="wg7-f3-ORb">
+        <!--Needs-->
+        <scene sceneID="SBD-Hw-jRL">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="NeedsViewController" customModule="Hunger_Free_City" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
-                        <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
+                <tableViewController id="m6r-nF-hEI" customClass="NeedsViewController" customModule="Hunger_Free_City" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="B9g-bb-bp2">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Needs View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
-                                <rect key="frame" x="204" y="279" width="192" height="42"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="highlightedColor" red="0.43137254901960786" green="0.53725490196078429" blue="0.60392156862745094" alpha="1" colorSpace="calibratedRGB"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
-                            <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Needed Items" id="iy2-BX-jHS"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="FwD-gU-zHU">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FwD-gU-zHU" id="Aaq-Sz-qrI">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="m6r-nF-hEI" id="nyP-jY-MjL"/>
+                            <outlet property="delegate" destination="m6r-nF-hEI" id="O3d-TS-cIP"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Needs" id="Lib-Qd-kN8"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5sZ-D7-7BW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1474" y="-736"/>
+            <point key="canvasLocation" x="1547" y="-726"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="Ict-Vu-KPL">
@@ -253,13 +248,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="guv-2T-vLA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2208" y="-118.5"/>
+            <point key="canvasLocation" x="2650" y="-118.5"/>
         </scene>
-        <!--Distribution Centers-->
+        <!--Donation Centers-->
         <scene sceneID="yCM-NZ-3cz">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nxH-I9-qqU" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Distribution Centers" image="house" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" tag="1" title="Donation Centers" image="house" id="acW-dT-cKf"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="eGq-eK-wGV">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -267,7 +262,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="mi8-kS-2PO"/>
+                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="3Gj-bH-rBT"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nZ3-Dp-GKe" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -278,7 +273,7 @@
         <scene sceneID="GTy-Fl-tpI">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kVQ-EK-W5m" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" tag="1" title="Needs" image="food" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="Needs" image="food" id="cPa-gy-q4n"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="IgI-H1-Wa1">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -286,7 +281,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="rootViewController" id="g0q-a2-DGV"/>
+                        <segue destination="m6r-nF-hEI" kind="relationship" relationship="rootViewController" id="a1Y-of-XQ8"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pt9-KK-HJE" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -443,13 +438,13 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fNc-Kh-Uhm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2152" y="521.5"/>
+            <point key="canvasLocation" x="2724" y="609.5"/>
         </scene>
         <!--Me-->
         <scene sceneID="gO5-xG-7hW">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jMi-5E-ZQV" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Me" image="person" id="W3g-f1-zag"/>
+                    <tabBarItem key="tabBarItem" tag="3" title="Me" image="person" id="W3g-f1-zag"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="tHm-S8-s0V">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
